--- a/main/templates/template.html
+++ b/main/templates/template.html
@@ -40,7 +40,7 @@
                                     <span class="px-3 py-2">Statistiques</span>
                                 </div>
                             </a>
-                            <!--<a href="{{url_for('get_weather')}}">-->
+                            <a href="{{url_for('get_weather')}}">
                                 <div class="flex h-10 w-10 mx-1 my-1">
                                     <img src="https://cdn-icons-png.flaticon.com/512/2046/2046254.png">
                                     <span class="px-3 py-2">Météo</span>
