--- a/main/templates/weather.html
+++ b/main/templates/weather.html
@@ -18,14 +18,14 @@
 
             <div id="left">
                 {% if data %}
-                <h2 class="font-semibold">{{ data.name }}</h2>
-                    <p id="temp">{{ data.temp2m | round(2) }}°</p>
+                <h2 class="font-semibold text-white">{{ data.name }}</h2>
+                    <p id="temp" class="text-white">{{ data.temp2m | round(2) }}°</p>
                     
                     <figure id="logo-weather">
                     
                         <img src="http://openweathermap.org/img/wn/{{ data.correspondance[1] }}d@4x.png" alt="weather icon">
                    
-                        <figcaption>{{ data.correspondance[0] }}</figcaption>
+                        <figcaption class="text-white">{{ data.correspondance[0] }}</figcaption>
                     </figure>
                 {% else %}
                 <h2>Utilisez la barre de recherche pour chercher une ville particulière</h2>
@@ -33,8 +33,8 @@
 
             </div>
 
-            <div id="right">
-                <h1>Météo</h1>
+            <div id="right" class="bg-blue-300/50">
+                <h1 class="text-white">Météo</h1>
 
                     <form action="" id="villeform">
                         <input  class="text-stone-700" name="city" id="city" type="text" value="{{ request.form['city'] }}" placeholder="Ville">
@@ -131,13 +131,13 @@
                 
                 <hr>
                     <br>
-                <p class="weather-data-item">Température ressentie: <span class="weather-data-value">{{ data.temp_ressentie }} °C</span></p>
+                <p class="weather-data-item text-white">Température ressentie: <span class="weather-data-value">{{ data.temp_ressentie }} °C</span></p>
                 <hr>
                 <br>
-                <p class="weather-data-item">Humidité: <span class="weather-data-value">{{ data.rh2m}} %</span>
+                <p class="weather-data-item text-white">Humidité: <span class="weather-data-value">{{ data.rh2m}} %</span>
                 <hr>
                 <br>
-                <p class="weather-data-item">Vent: <span class="weather-data-value">{{ data.wind10m}} Km/h</span>
+                <p class="weather-data-item text-white">Vent: <span class="weather-data-value">{{ data.wind10m}} Km/h</span>
                
 
                 </p>
