--- a/main/templates/weather.html
+++ b/main/templates/weather.html
@@ -3,7 +3,7 @@
 <html lang="fr" >
     <head>
         <meta charset="utf-8">
-        <title>météo</title>
+        <title>Météo</title>
         <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <link rel="stylesheet" href="static/css/template.css">
     </head>
