--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -38,6 +38,7 @@
                             data: [wat, 100-wat],
                             borderWidth : 2,
                             backgroundColor : ["#ef4444", "#f18c8c"],
+                            hoverBackgroundColor : ["#ef4444", "#f18c8c"],
                             borderColor : ["transparent"],
                             cutout : "50%",
                             borderRadius : 0
